Restyled to fit on iPhone and fixed seperator stylings

--- a/src/components/AddFoodComponents/SearchForm/SearchForm.scss
+++ b/src/components/AddFoodComponents/SearchForm/SearchForm.scss
@@ -1,12 +1,15 @@
 #search_form {
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  // display: grid;
+  // grid-template-rows: 42px 1fr 1fr;
+  display: flex;
+  flex-direction: column;
   form {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-rows: 42px 1fr 1fr;
     #add_food_search_container {
       width: 100%;
-      height: 100%;
+      height: 42px;
 
       display: grid;
       input {
@@ -36,24 +39,27 @@
         transition: all 0.3s ease-in-out;
       }
       button {
-        display: none;
-
+        // display: none;
+        width: fit-content;
         height: 100%;
+
         grid-area: 1/1/1/1;
         justify-self: end;
-        padding: 0;
+        padding: 0 32px;
 
         background: none;
         outline: none;
-        color: black;
+        color: white;
 
         box-shadow: none;
       }
     }
-
-    #add_food_nutrition_data {
-      #add_food_nutrition_data {
-      }
+  }
+  #add_food_nutrition_data {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    form {
       #add_food_servings_container {
         height: 36px;
         display: flex;
@@ -98,5 +104,12 @@
         }
       }
     }
+  }
+
+  .horizontal_seperator {
+    height: 4px;
+    background: white;
+    margin: 24px 0px;
+    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.1);
   }
 }
